style.css
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.header {
    display: flex;
    background-color: #1F2937;
    font-size: 24px;
    color: #F9FAF8;
}

a {
    text-decoration: none;
    color: #F9FAF8;
    font-size: 18px;
}

ul{
    list-style-type: none;
    margin-left: auto;
    display: flex;
    margin-right: auto;
    gap: 12px;
}

.hero-text{
    background-color: #1F2937;
    color: #F9FAF8;
    display: flex;
    align-items: flex-start;
    height: 320px;
}

.right-img{
    margin-right: auto;
    height: 180px;
    width: 400px;
    margin-top: 50px;
}

h1{
    margin-left: auto;
    font-size: 24px;
}

.left-side{
    margin-left: 250px;
    margin-right: auto;
    display: flex;
    width: 350px;
    flex-wrap: wrap;
}

p{
    margin-top: 0;
}

h2 {
    margin-bottom: 0;
    font-size: 48px;
    font-weight: bold;
}

.sign-up {
    color: white;
    font-weight: bold;
    background-color: #3882F6;
    border-radius: 12px;
    width: 80px;
    padding: 4px;
}

.random-info{
    display: flex;
    justify-content: center;
    align-items: center;
}

.random-imgs {
    display: flex;
    flex-wrap: nowrap;
    width: 80%;
    gap: 30px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 40px;
}

.random-imgs p {
    display: flex;
    justify-content: center;
}

.box{
    width: 25%;
}

.box img {
    height: 250px;
    width: 250px;
    gap: 15px;
    border-radius: 30px;
}

.quote p {
    font-size: 36px;
    font-style: italic;
}

.quote {
    background-color: #E5E7EB;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 8%;
}

.inspiring {
    width: 52%;
    margin-top: 100px;
    margin-left: 120px;
}

.thor {
    margin-left: 500px;
    font-weight: 900;
    color: #1F2937;
}

